--- a/2019/05/ARTS-2019-05-11.md
+++ b/2019/05/ARTS-2019-05-11.md
@@ -1,7 +1,7 @@
 
  [Algorithm 905. Sort Array By Parity](#algorithm)
 
- [Review](#review)
+ [Review Java拷贝InputStream的方式](#review)
 
  [Technique](#technique)
 
@@ -66,6 +66,51 @@ public class SortArrayByParity {
 ```
 
 # Review
+
+stackoveflow 连接：https://stackoverflow.com/questions/5923817/how-to-clone-an-inputstream
+
+Java里面的流是基于迭代器模式的，只要循环过一次，再次使用就会抛出异常，有时候我们想clone这个流多次，用来运行多次，这个时候，就会复制多份了，只用一份是不行的，毕竟在内存里面的指针都是指向同一份地址的，如果需要多次处理，并且这个字节流的数据并不是更大的情况下，可采用下面的方式，拷贝 InputStream 到 a ByteArrayOutputStream里面。
+
+
+JDK9之前的做法：
+
+```java
+
+ByteArrayOutputStream baos = new ByteArrayOutputStream();
+
+// Fake code simulating the copy
+// You can generally do better with nio if you need...
+// And please, unlike me, do something about the Exceptions :D
+byte[] buffer = new byte[1024];
+int len;
+while ((len = input.read(buffer)) > -1 ) {
+    baos.write(buffer, 0, len);
+}
+baos.flush();
+
+// Open new InputStreams using the recorded bytes
+// Can be repeated as many times as you wish
+InputStream is1 = new ByteArrayInputStream(baos.toByteArray()); 
+InputStream is2 = new ByteArrayInputStream(baos.toByteArray()); 
+
+```
+
+
+在JDK9里面，使用内置方法transferTo，如下
+
+```java
+
+ByteArrayOutputStream baos = new ByteArrayOutputStream();
+input.transferTo(baos);
+InputStream firstClone = new ByteArrayInputStream(baos.toByteArray()); 
+InputStream secondClone = new ByteArrayInputStream(baos.toByteArray()); 
+
+```
+
+
+
+
+
 
 
 # Technique
