adding code of share into arts20190511

--- a/2019/05/ARTS-2019-05-11.md
+++ b/2019/05/ARTS-2019-05-11.md
@@ -5,7 +5,7 @@
 
  [Technique](#technique)
 
- [Share](#share)
+ [Share 安装jupyter及其suggset插件](#share)
 
 
 # Algorithm
@@ -117,6 +117,39 @@ InputStream secondClone = new ByteArrayInputStream(baos.toByteArray());
 
 
 # Share
+
+前言：
+Jupyter Notebook是一个开源的Web应用程序，允许用户创建和共享包含代码、方程式、可视化和文本的文档。它的用途包括：数据清理和转换、数值模拟、统计建模、数据可视化、机器学习等等。它具有以下优势：
+
+可选择语言：支持超过40种编程语言，包括Python、R、Julia、Scala等。
+分享笔记本：可以使用电子邮件、Dropbox、GitHub和Jupyter Notebook Viewer与他人共享。
+交互式输出：代码可以生成丰富的交互式输出，包括HTML、图像、视频、LaTeX等等。
+大数据整合：通过Python、R、Scala编程语言使用Apache Spark等大数据框架工具。支持使用pandas、scikit-learn、ggplot2、TensorFlow来探索同一份数据。
+ 
+安装：
+
+python3 -m pip install --upgrade pip
+python3 -m pip install jupyter
+pip install ipython
+
+安装suggest和扩展插件：
+python -m pip install jupyter_contrib_nbextensions
+jupyter contrib nbextension install --user --skip-running-check
+安装完成后，运行启动：
+jupyter notebook
+默认的地址是：
+http://localhost:8888/tree#notebooks
+默认有4中类型的文件可以创建，python的就选第一种即可
+
+
+点击下面的地方，配置suggest
+
+
+然后选中下面的组件即可
+
+最终效果：
+
+
 
 
 
