adding content  of technology into arts20190511

--- a/2019/05/ARTS-2019-05-11.md
+++ b/2019/05/ARTS-2019-05-11.md
@@ -3,7 +3,7 @@
 
  [Review Java拷贝InputStream的方式](#review)
 
- [Technique](#technique)
+ [Technique java-instrumentation](#technique)
 
  [Share 安装jupyter及其suggset插件](#share)
 
@@ -108,12 +108,13 @@ InputStream secondClone = new ByteArrayInputStream(baos.toByteArray());
 ```
 
 
-
-
-
-
-
 # Technique
+
+java instrumentation api is a powerful tool that allow java programming language agents to instrument programs running on the jvm.
+
+the mechanism for instrumentation is modification of the byte-code of method. 
+
+ the detail introduction :  https://docs.oracle.com/javase/8/docs/api/java/lang/instrument/package-summary.html
 
 
 # Share
