adding content  of technology and share into arts20190511

--- a/2019/05/ARTS-2019-05-18.md
+++ b/2019/05/ARTS-2019-05-18.md
@@ -3,9 +3,9 @@
 
  [Review](#review)
 
- [Technique](#technique)
+ [Technique 使用aspose提取word里面所有的图片 ](#technique)
 
- [Share](#share)
+ [Share Java递归遍历某个文件夹](#share)
 
 
 # Algorithm
@@ -74,8 +74,103 @@ public class SortArrayByParity2 {
 # Technique
 
 
+
+```java
+
+    static int imageIndex = 0;
+
+    /***
+     *
+     * @param paths 用于提取图片的文件路径集合
+     */
+    public static void exactImgs(Set<String> paths){
+        String dir="E:\\question_img";
+        clearDir(dir);
+        for(String path:paths){
+            try {
+                extarctImgToFile(path,dir);
+            }catch (Exception e){
+                e.printStackTrace();
+            }
+        }
+    }
+    /***
+     *
+     * @param filePath 读取word文件的路径
+     * @param savePath 图片保存的路径
+     * @throws Exception
+     */
+    public static void extarctImgToFile(String  filePath,String savePath)  throws  Exception{
+        Document doc=new Document(filePath);
+        NodeCollection<Shape> shapes = (NodeCollection<Shape>) doc.getChildNodes(NodeType.SHAPE, true);
+        for (Shape shape : shapes) {
+            if (shape.hasImage()) {
+                shape.getImageData().save(savePath+"/"+imageIndex+".jpg");
+                imageIndex++;
+            }
+        }
+
+    }
+
+```
+
+
+
+注意这里面可能会判断是否根据情况创建目录，下面这个方法的功能是判断某个目录是否存在，如果不存在就创建，如果存在就递归删除该目录路径，最后再重新创建这个目录，类似于清空的功能。
+
+FileUtil这个工具类来自apache commons-io 2.6的版本：
+
+```java
+    private static void clearDir(String dirPath)  {
+        File theDir = new File(dirPath);
+        if(!theDir.exists()){
+            theDir.mkdirs();
+        }else{
+            try {
+                FileUtils.deleteDirectory(theDir);
+            }catch (Exception e){
+                e.printStackTrace();
+            }
+            theDir.mkdirs();
+        }
+    }
+```
+
+
+
+
+
 # Share
 
+
+
+使用java递归遍历某个文件，并找出里面符合特定格式的word文件，最后把整个路径放在Set里面返回，代码如下，主调用方法：
+
+```java
+  public static void main(String[] args)throws Exception {
+        Set<String> allFilePaths=new HashSet<String>();
+        getAllDocPath("C:\\Users\\Administrator\\Desktop\\试题",allFilePaths);
+    }
+```
+
+核心方法：
+
+```java
+    public static void getAllDocPath(String rootPath,Set<String> store){
+
+       File file=new File(rootPath);
+       File[] files=  file.listFiles();//某个文件路径下面的所有文件
+       for(File tmp:files){
+           if(tmp.isDirectory()){//判断如果是目录，就递归循环
+               getAllDocPath(tmp.getAbsolutePath(),store);
+               //否则就判断是否属于特定格式，是的话就追加到store里面
+           } else if(tmp.isFile()&&(tmp.getName().endsWith("doc")||tmp.getName().endsWith("docx"))){
+               store.add(tmp.getAbsolutePath());
+           }
+       }
+
+    }
+```
 
 
 
