added article, what is the difference between @RequestParam and @RequestPart in spring boot annotation？

--- a/2019/05/ARTS-2019-05-18.md
+++ b/2019/05/ARTS-2019-05-18.md
@@ -1,7 +1,7 @@
 
  [Algorithm 922. Sort Array By Parity II](#algorithm)
 
- [Review](#review)
+ [Review Spring boot中@RequestPart 和 @RequestParam的区别是啥](#review)
 
  [Technique 使用aspose提取word里面所有的图片 ](#technique)
 
@@ -69,6 +69,41 @@ public class SortArrayByParity2 {
 ```
 
 # Review
+
+https://docs.spring.io/spring/docs/current/javadoc-api/org/springframework/web/bind/annotation/RequestPart.html
+
+
+今天在使用spring boot开发一个web文件上传的功能时，发现一个问题，如下代码
+
+```java
+    @RequestMapping(value="/upload",method = RequestMethod.POST)
+    @ResponseBody
+    public String uploadFile(@RequestPart(value = "file") MultipartFile file) {
+	
+	
+	return "ok";
+	}
+```
+
+如上的方法注解，如果使用的是@RequestParam，则postman客户端，总是报 参数file不能为空，但我明明选择了本地文件进行上传，为啥报400错误呢，经过一番排查，发现用注解@RequestPart就可以。
+
+
+
+那么@RequestPart 和 @RequestParam的区别是啥？
+
+
+据官网文档描述：
+
+https://docs.spring.io/spring/docs/current/javadoc-api/org/springframework/web/bind/annotation/RequestPart.html
+
+
+@RequestPart 和 @RequestParam都可以用做来接受，multipart/form-data的表单提交参数，区别在于当方法参数不是一个string或者原生的 MultipartFile / Part,的时候，@RequestParam依赖注册的 Converter or PropertyEditor的类型转换，
+而@RequestPart依赖请求的'Content-Type' header类型，底部是通过HttpMessageConverters转换而来。
+
+
+简单点说如果表单传的都是name-value的字符串格式，那么推荐使用@RequestParam，如果是json，xml等上传的文件格式推荐使用@RequestPart 
+
+
 
 
 # Technique
