updating content on yesterday

--- a/2019/05/ARTS-2019-05-25.md
+++ b/2019/05/ARTS-2019-05-25.md
@@ -215,7 +215,15 @@ http://192.168.10.125:8888/c1/xxx.js
 由于其一级路径是c1，所以通过了nginx的拦截，整个页面就加载正常，这样以来与Nginx的集成就算成功了，这一点也是要在开发中注意的，通过了细化路径，也方便了访问权限的拦截控制。
 
 ```
+根据群友反馈，还有另外一种方式：
+在application.properties定义：
+```
+server.context-path= /app # Context path of the application.
+````
+应用的上下文路径，也可以称为项目路径，是构成url地址的一部分。
 
+
+这样以来/app就构成了，整个spring boot项目的的访问的一级目录，所有的url访问，都必须在端口后面加上这个路径，同理静态资源目录也一样，需要建一个叫app的目录来保持统一，这样也方便使用nginx对spring-boot项目做映射
 
 
 # Share
