add technique for usage of redis keys and scan

--- a/2019/06/ARTS-2019-06-02.md
+++ b/2019/06/ARTS-2019-06-02.md
@@ -3,7 +3,7 @@
  
  [Review](#review)
 
- [Technique](#technique)
+ [Technique redis的keys和scan命令的区别](#technique)
 
  [Share 给定一个无序数组，如何查找第K小的值](#share)
 
@@ -108,6 +108,63 @@ public class SumEvenNumber {
 
 
 # Technique
+
+
+
+
+redis的keys命令，通来在用来删除相关的key时使用，但这个命令有一个弊端，在redis拥有数百万的keys的时候，会执行的比较慢，更为致命的是，这个命令会阻塞多路复用的主线程，在此执行之间其他的发送向redis服务端的命令，就会阻塞，从而引发一系列级联反应，所以应该在生产环境禁用使用keys和类型的命令smembers，这种时间复杂度为O（N），且会阻塞主线程的命令。
+
+keys命令的原理就是扫描整个redis里面所有的db的数据，然后根据情况得出我们想要的通配的数据。
+
+https://redis.io/commands/KEYS
+
+
+
+在生产环境我们应该使用scan命令，代替keys命令，同样是O（N）复杂度的scan命令，支持通配查找，并且可以不用阻塞主线程，最重要的是支持游标按批次迭代返回数据，所以是比较理想的选择。
+
+https://redis.io/commands/scan
+
+但scan命令的缺点是，返回的数据有可能重复，需要我们在业务层按需要去重，scan命令的游标从0开始，也从0结束，每次返回的数据，都会返回下一次游标应该传的值，我们根据这个值，再去进行下一次的访问，如果返回的数据为空并不代表没有数据了，只有游标返回的值是0的情况下代表结束。
+
+
+redis命令例子如下：
+
+```
+
+scan 0 match my*key count 10000
+
+```
+
+在jedis里面的代码例子如下：
+
+```java
+		       Jedis jedis = getJedis();
+		       //存储返回的结果
+				Set<String> result=new HashSet<String>();
+				//设置查询的参数
+				ScanParams scanParams=new ScanParams().count(scanLimitSize).match(pattern);
+				//游标的开始
+				String cur=ScanParams.SCAN_POINTER_START;
+				do{
+				   //遍历每一批数据
+					ScanResult<String> scan=jedis.scan(cur, scanParams);
+					//得到结果返回
+					List<String> scanResult =scan.getResult();
+					result.addAll(scanResult);
+					//获取新的游标
+					cur=scan.getStringCursor();
+				//判断游标迭代是否结束	
+				}while (!cur.equals(ScanParams.SCAN_POINTER_START));
+				//返回结果
+				return result;
+```
+
+
+
+
+
+
+
 
 
 # Share
