add java tag for  algorithm

--- a/2019/06/ARTS-2019-06-23.md
+++ b/2019/06/ARTS-2019-06-23.md
@@ -9,6 +9,9 @@
 
 
 # Algorithm
+```java
+
+
 package leetcode.easy.array_all;
 
 /****
@@ -54,7 +57,7 @@ public class PartitionArrayEqualSum {
 
 
 }
-
+```
 
 # Review
 
