--- a/2019/06/ARTS-2019-06-02.md
+++ b/2019/06/ARTS-2019-06-02.md
@@ -1,7 +1,7 @@
 
  [Algorithm 985. Sum of Even Numbers After Queries](#algorithm)
  
- [Review](#review)
+ [Review Every Hobby Is an Attempt to Make Money](#review)
 
  [Technique redis的keys和scan命令的区别](#technique)
 
@@ -105,6 +105,11 @@ public class SumEvenNumber {
 
 
 # Review
+
+https://www.bennettnotes.com/post/making-money-out-of-every-hobby/
+
+作者主要自己的兴趣从小时候发自内心的喜欢某一件事，到成年人之后，每做一件事都会
+考虑其是否能带来收入。
 
 
 # Technique
