add some content

--- a/2019/06/ARTS-2019-06-09.md
+++ b/2019/06/ARTS-2019-06-09.md
@@ -1,11 +1,11 @@
 
  [Algorithm Implement trie (prefix tree)](#algorithm)
 
- [Review](#review)
+ [Review flink的build doc](#review)
 
  [Technique](#technique)
 
- [Share](#share)
+ [Share 一个富文本编辑器](#share)
 
 
 # Algorithm
@@ -329,14 +329,18 @@ public class TrieByMap {
 
 
 # Review
+https://ci.apache.org/projects/flink/flink-docs-release-1.8/flinkDev/building.html
 
+主要介绍了，使用maven编译flink的几种方式
 
 # Technique
 
 
 # Share
 
+https://quilljs.com/
 
+感觉还不错，正在使用
 
 
 
