add technique content

--- a/2019/06/ARTS-2019-06-09.md
+++ b/2019/06/ARTS-2019-06-09.md
@@ -3,7 +3,7 @@
 
  [Review flink的build doc](#review)
 
- [Technique](#technique)
+ [Technique Class JavaLaunchHelper is implemented in both ](#technique)
 
  [Share 一个富文本编辑器](#share)
 
@@ -335,6 +335,23 @@ https://ci.apache.org/projects/flink/flink-docs-release-1.8/flinkDev/building.ht
 
 # Technique
 
+在mac电脑上运行idea的java程序时，控制台经常抛出一行红字信息，如下:
+```java
+objc[3648]: Class JavaLaunchHelper is implemented in both /Library/Java/JavaVirtualMachines/jdk1.8.0_121.jdk/Contents/Home/bin/java (0x10d19c4c0) and /Library/Java/JavaVirtualMachines/jdk1.8.0_121.jdk/Contents/Home/jre/lib/libinstrument.dylib (0x10ea194e0). One of the two will be used. Which one is undefined.
+```
+据说是IDEA的bug，详情可见：https://youtrack.jetbrains.com/issue/IDEA-170117
+
+不过这个问题，并不影响使用，就是对于有强迫症的同学可能有点受不了，我们选择在控制台隐藏：
+
+方法是：
+
+（1）进入选项【Preferences】- 【Editor】-【General】-【Console】
+
+ (2) 在自动折叠区加入这条信息：
+```java
+Class JavaLaunchHelper is implemented in both
+```
+然后再运行，IDE就会自动帮我们隐藏掉
 
 # Share
 
