add share content

--- a/2019/06/ARTS-2019-06-16.md
+++ b/2019/06/ARTS-2019-06-16.md
@@ -5,7 +5,7 @@
 
  [Technique Flink1.8源码编译安装](#technique)
 
- [Share](#share)
+ [Share 关于Java反射获取泛型参数](#share)
 
 
 # Algorithm
@@ -470,6 +470,11 @@ bin/flink run -m yarn-cluster -yn 2 -yjm 1024 -ytm 1024 ./examples/batch/WordCou
 
 # Share
 
+
+http://tutorials.jenkov.com/java-reflection/generics.html
+
+主要介绍了在java中，那些场景下可以用反射获取泛型类型，那些场景下不能用反射
+获取泛型类型，最后并给出了一些实际的例子。
 
 
 
