--- a/2019/06/ARTS-2019-06-23.md
+++ b/2019/06/ARTS-2019-06-23.md
@@ -3,9 +3,9 @@
 
  [Review](#review)
 
- [Technique](#technique)
+ [Technique 解决cdh切换jdk的版本的问题](#technique)
 
- [Share](#share)
+ [ShareYAR](#share)
 
 
 # Algorithm
@@ -63,6 +63,56 @@ public class PartitionArrayEqualSum {
 
 
 # Technique
+
+
+
+cdh默认使用的jdk，如果是使用yum或者时rpm安装的java，那么如果想要切换成
+自己下载tar.gz的压缩包，可能会导致，重启cm-server失败：
+
+
+```
+ /etc/init.d/cloudera-scm-server restart  
+ //如果失败，则可以查看系统的log
+ journalctl -xe
+ 或者
+ service --status-all
+```
+但如果从上面的两个信息中找不到有用的信息，可以从cm-server的log中，查找原因，主要有两个文件：
+
+这主要包含两个日志文件：
+```
+/var/log/cloudera-scm-server/cloudera-scm-server.log
+/var/log/cloudera-scm-server/cloudera-scm-server.out
+```
+
+比如，这次我遇到的异常就是，在cloudera-scm-server.out中发现的异常，如下：
+
+```
+JAVA_HOME is not set
+```
+
+但我在linux下执行java -version是没问题的，而且我也正确配置了环境变量，
+
+最终经查询资料，发现scm-server的配置文件里面是需要单独指定JAVA_HOME的，如果不指定但是用rpm安装的也是可以，其他的就得指定
+
+
+```
+vi /etc/default/cloudera-scm-server
+```
+最终在这个配置文件的最下面添加了JAVA_HOME的指定：
+
+
+```
+export JAVA_HOME=/usr/jdk1.7.0_80/
+```
+然后，重启成功。
+
+
+注意，最后还没成功，需要检查cdh的页面上是否配置了指定的jdk的目录，具体的方法是登录上cm的web页面上，然后搜索java后，查看jdk的配置目录。
+
+
+
+
 
 
 # Share
