add share content

--- a/2019/06/ARTS-2019-06-23.md
+++ b/2019/06/ARTS-2019-06-23.md
@@ -5,7 +5,7 @@
 
  [Technique 解决cdh切换jdk的版本的问题](#technique)
 
- [ShareYAR](#share)
+ [Share scp远程拷贝文件到本地](#share)
 
 
 # Algorithm
@@ -118,6 +118,8 @@ export JAVA_HOME=/usr/jdk1.7.0_80/
 # Share
 
 
+有时候我们的机器是单向的，比如mac可以连接服务器，但服务器却不能连接mac
 
+scp -r search@192.168.10.150:/home/search/hadoop soft_install
 
 
